bin_PROGRAMS = 1-16 1-17 1-18 1-1 1-20 1-21 1-22 1-23 1-23-fread 1-24 1-24-stack 1-3 1-4 2-1 2-3 2-4 2-6 3-2 3-3 4-10 4-12 4-1 4-2 4-3 4-4 4-5 4-6 4-7 4-8 4-9 5-13 5-17 5-3 5-4 5-7 5-9 6-1 6-3 6-3-w-hashtable 6-5 7-1 7-3 8-1 8-3 8-4 8-5 8-6 8-7 unicodes test_arraylist_str
AM_CFLAGS = -std=c99
test_arraylist_str_SOURCES = arraylist_str.c test_arraylist_str.c
unicodes_SOURCES = unicodes.c
1_16_SOURCES = 1-16.c common.c common.h
1_17_SOURCES = 1-17.c common.c common.h
1_18_SOURCES = 1-18.c common.c common.h
1_1_SOURCES = 1-1.c common.c common.h
1_20_SOURCES = 1-20.c common.c common.h
1_21_SOURCES = 1-21.c common.c common.h
1_22_SOURCES = 1-22.c common.c common.h
1_23_SOURCES = 1-23.c common.c common.h
1_23_fread_SOURCES = 1-23-fread.c common.c common.h
1_24_SOURCES = 1-24.c common.c common.h char_stack.c char_stack.h
1_24_stack_SOURCES = 1-24-stack.c common.c common.h char_stack.c char_stack.h
1_3_SOURCES = 1-3.c common.c common.h
1_4_SOURCES = 1-4.c common.c common.h
2_1_SOURCES = 2-1.c common.c common.h
2_3_SOURCES = 2-3.c common.c common.h
2_3_LDADD = -lm
2_4_SOURCES = 2-4.c common.c common.h
2_6_SOURCES = 2-6.c common.c common.h
3_2_SOURCES = 3-2.c common.c common.h
3_3_SOURCES = 3-3.c common.c common.h
4_10_SOURCES = 4-10.c common.c common.h
4_12_SOURCES = 4-12.c common.c common.h
4_1_SOURCES = 4-1.c common.c common.h
4_2_SOURCES = 4-2.c common.c common.h
4_2_LDADD = -lm
4_3_SOURCES = 4-3.c common.c common.h arraylist_int.c arraylist_int.h stack.c stack.h
4_3_LDADD = -lm
4_4_SOURCES = 4-4.c common.c common.h arraylist_int.c arraylist_int.h stack.c stack.h
4_4_LDADD = -lm
4_5_SOURCES = 4-5.c common.c common.h arraylist_int.c arraylist_int.h stack.c stack.h
4_5_LDADD = -lm
4_6_SOURCES = 4-6.c common.c common.h arraylist_double.c arraylist_double.h arraylist_int.c arraylist_int.h stack.c stack.h
4_6_LDADD = -lm
4_7_SOURCES = 4-7.c common.c common.h
4_8_SOURCES = 4-8.c common.c common.h
4_9_SOURCES = 4-9.c common.c common.h
5_13_SOURCES = 5-13.c common.c common.h
5_17_SOURCES = 5-17.c arraylist_str.c common.c common.h
5_3_SOURCES = 5-3.c common.c common.h
5_4_SOURCES = 5-4.c common.c common.h
5_7_SOURCES = 5-7.c common.c common.h
5_9_SOURCES = 5-9.c common.c common.h
6_1_SOURCES = 6-1.c common.c common.h
6_3_SOURCES = 6-3.c common.c common.h sorted_tree.c sorted_tree.h
6_3_w_hashtable_SOURCES = 6-3-w-hashtable.c common.c common.h sorted_tree.c sorted_tree.h hashtable.c hashtable.h
6_5_SOURCES = 6-5.c common.c common.h hashtable.c hashtable.h arraylist_str.c arraylist_str.h
7_1_SOURCES = 7-1.c common.c common.h
7_3_SOURCES = 7-3.c common.c common.h
8_1_SOURCES = 8-1.c common.c common.h
8_3_SOURCES = 8-3.c common.c common.h
8_4_SOURCES = 8-4.c common.c common.h
8_5_SOURCES = 8-5.c common.c common.h
8_6_SOURCES = 8-6.c common.c common.h
8_7_SOURCES = 8-7.c common.c common.h
